refactor: groups naming part